welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: value unary_! is not a member of Unit
  while (!fin()){
         ^DwarfCode:3: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:18: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:26: error: value unary_! is not a member of Unit
    while (!fin()){
           ^DwarfCode:38: error: not found: value Direction
  if (getDirection()==Direction.est){
                      ^DwarfCode:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^DwarfCode:40: warning: enclosing method fin has result type Unit: return value discarded
      return true
      ^DwarfCode:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    } else return false
                  ^DwarfCode:41: warning: enclosing method fin has result type Unit: return value discarded
    } else return false
           ^DwarfCode:42: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^DwarfCode:42: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^